<resources>
    <string name="app_name">AdbOverTCP</string>

    <string name="current_prop_wifi_address_1_s">Current Prop Wifi Address: %1$s</string>
    <string name="current_prop_tcp_port_1_s">Current Prop Tcp Port: %1$s</string>
    <string name="using_ip_for_forward_1_s">Using IP For Forward: %1$s</string>
    <string name="port_to_use">Port To Use: </string>
    <string name="port_default_tips">Default 5555</string>
    <string name="refresh_prop">Refresh</string>
    <string name="set_port">Set Port</string>
</resources>
